--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,17 @@ before_script:
   - chmod +x ./scripts/*.sh
 services:
   - docker
+env:
+  PULUMI_ACCESS_TOKEN: {PULUMI_ACCESS_TOKEN}
 
 jobs:
   include:
+    - name: Login
+        uses: docker://pulumi/actions:v1.0.0
+        with:
+          args: login gs://xxx
+        env:
+          PULUMI_CREDENTIALS_PATH: /github/home/.pulumi
     - stage: pulumi-preview
       script: ./scripts/pulumi-preview.sh
       if: type = pull_request
