--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,9 @@ before_script:
 services:
   - docker
 env:
-  - PULUMI_ACCESS_TOKEN: ${PULUMI_ACCESS_TOKEN}
+  - PULUMI_ACCESS_TOKEN: $PULUMI_ACCESS_TOKEN
+  - ACCESS_KEY_ID: $AWS_ACCESS_KEY_ID
+  - SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY
 
 jobs:
   include:
