--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,6 @@ before_script:
   - chmod +x ./scripts/*.sh
 services:
   - docker
-env:
-  - PULUMI_ACCESS_TOKEN: $PULUMI_ACCESS_TOKEN
-  - ACCESS_KEY_ID: $AWS_ACCESS_KEY_ID
-  - SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY
 
 jobs:
   include:
@@ -20,3 +16,6 @@ jobs:
       script: ./scripts/pulumi-preview.sh
     - stage: pulumi-up
       script: ./scripts/run-pulumi.sh
+      access_key_id: $AWS_ACCESS_KEY_ID
+      secret_access_key: $AWS_SECRET_ACCESS_KEY
+      region: $AWS_REGION
